deploy/config/gateway/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argo-system
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: argo-system-argocd-server
      port:
        number: 80
  tls:
    - hosts:
        - argocd
