deploy/config/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: kgateway-system
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: main
      port:
        number: 80
  tls:
    - hosts:
        - synapse-gateway
